syntax = "proto3";

import "google/protobuf/timestamp.proto";

package gprc_notes;
option go_package = "./internal/notes/server/grpcserver/pb";


message Note {
    uint64 ID = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp dateAdded = 4;
    google.protobuf.Timestamp dateNotify = 5;
}

service Notes{
    rpc GetNotes(GetNotesRequest) returns (GetNotesResponse) {}
    rpc GetNote(GetNoteRequest) returns (GetNoteResponse) {}
    rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {}
    rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse) {}
    rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse) {}
}

message GetNotesRequest {

}

message GetNotesResponse {
    repeated Note notes = 1;
}

message GetNoteRequest {
    uint64 ID = 1;
}

message GetNoteResponse {
    Note note = 1;
}

message CreateNoteRequest {
    Note note = 1;
}
message CreateNoteResponse {

}

message DeleteNoteRequest {
    uint64 ID = 1;
}
message DeleteNoteResponse {

}

message UpdateNoteRequest {
    Note note = 1;
} 

message UpdateNoteResponse {

}